--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="slider" id="root">
             <!-- slider-arrow -->
             <div class="slider__arrow">
-                <button @click="prevImg()">
+                <button @click="prevImgClick()">
                     prev
                 </button>
             </div>
@@ -29,7 +29,7 @@
             <!-- /slider-img -->
             <!-- slider-arrow -->
             <div class="slider__arrow">
-                <button @click="nextImg()">
+                <button @click="nextImgClick()">
                     next
                 </button>
             </div>
